@@ -41,7 +41,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>3.14.2</version>
+            <version>3.14.9</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
